# Solving-LinkedIn-Minigames-with-Linear-Optimization

./: .gitignore  Makefile  README.md  note3_solving_linkedin_zip_with_pyomo.ipynb  pyproject.toml  requirements.txt  setup.sh  solving-linkedin-mini-sudoku-with-pyomo.ipynb  solving-linkedin-zip-with-pyomo.ipynb
.github/workflows/: deploy.yml
book/: landing.md  myst.yml  style.css
book/notebooks/: 1-queens.ipynb  2-tango.ipynb  3-zip.ipynb  4-mini-sudoku.ipynb
notebooks/: 1-solving-linkedin-queens.ipynb  1_solving_linkedin_queens_with_linear_optimization.ipynb  2-solving-linkedin-tango.ipynb  2_solving_linkedin_tango_with_linear_optimizarion.ipynb  3-solving-linkedin-zip.ipynb  3_solving_linkedin_zip_with_linear_optimization.ipynb  4-solving-linkedin-mini-sudoku.ipynb  4_solving-linkedin-mini-sudoku-with-linear_optimization.ipynb
