[project]
name = "Solving-LinkedIn-Minigames-with-Linear-Optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=13.0.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pyomo>=6.10.0",
]

[dependency-groups]
dev = [
    "jupyter-book>=2.1.2",
]
