[project]
name = "Solving-LinkedIn-Games-by-Linear-Optimization"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=13.0.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pyomo>=6.10.0",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyter-book>=2.1.2",
    "jupyterlab>=4.5.6",
    "jupyterlab-myst>=2.6.0",
]
